[versioneer]
VCS=git
style=pep440-post
versionfile_source=src/mahler/scheduler/remoteflow/_version.py
versionfile_build=mahler/scheduler/remoteflow/_version.py
tag_prefix=
parentdir_prefix=mahler.scheduler.remoteflow-

[aliases]
test=pytest

[bdist_wheel]
universal=1

[metadata]
license_file=LICENSE
